# WBDB

./: CMakeLists.txt  LICENSE  README.md  buildLinux.sh  cleanbuild.sh  configure.h.in
include/: main.h
lib/: CMakeLists.txt
lib/inc/: math.h
lib/src/: math.cc
src/: main.cc  main.cxx
